  and 'copy/move'. (RFB)

2013-06-20
- bios/disk.c: Changed byteswap message. (VRI)
- bios/ikbd.c: Added scancode emulation for EmuCON2 on serial console. (VRI)

2013-06-21
- bdos/mem.h bdos/osmem.c doc/osmemory.txt: Fix regression: Malloc()
  should not cause a halt() due to lack of internal memory. (RFB)

2013-06-23
- Makefile: Added support for "make ramtos.dsm". (VRI)
- util/bootasm.S: Fixed memory corruption due to bad stack in boot.prg. (VRI)
- bios/bios.c: Hide the cursor after system halted. (VRI)

2013-06-24
- *: Updated copyright year for files modified since last release. (VRI)

2013-06-25
- *: Stripped trailing spaces. (VRI)

2013-07-03
- doc/announce.txt: Updated release date. (VRI)

* Release: 0.9.1

2013-07-29
- vdi/vdi_line.c: Speed up rectangle draw by eliminating locals. (RFB)
- vdi/vdi_defs.h vdi/vdi_fill.c vdi/vdi_line.c: Static cleanup. (RFB)

2013-07-30
- bios/acsi.c bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c:
  Use shift for logical/physical sector number conversion. (RFB)

2013-07-31
- aes/gemasync.c aes/gemdisp.c aes/geminput.c aes/gemoblib.c
  include/compat.h: Eliminate LLOWD() compatibility macro. (RFB)
- aes/geminput.c include/compat.h: Eliminate LHIWD() compatibility
  macro. (RFB)

2013-08-01
- aes/gemevlib.c aes/gemevlib.h aes/gemsuper.c: Replace some macro usage
  with inline function. (RFB)
- aes/gemsuper.c: Replace some compatibility macro usage. (RFB)
- aes/gemasync.c aes/geminput.c include/compat.h: Eliminate HW()
  compatibility macro. (RFB)
- aes/gemsclib.c aes/gemshlib.c desk/deskfun.c include/compat.h:
  Eliminate LBGET() compatibility macro. (RFB)
- aes/gemaplib.c aes/gemsclib.c aes/gemshlib.c include/compat.h:
  Eliminate LBSET() compatibility macro. (RFB)

2013-08-03
- aes/gemshlib.c: Fix bug in shel_find(): the AES path wasn't
  searched. (RFB)
- aes/gemsuper.c aes/gemsuper.h: Code cleanup: replace #defines, casts
  with structure definition. (RFB)